infra/k8s/apps/web-client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-client
  namespace: web-client
  labels:
    app: web-client
spec:
  selector:
    app: web-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8083
  type: ClusterIP
